# blackjack

./: Cargo.toml  TODO.md
ai/random/: Cargo.toml
ai/random/src/: ai.rs  main.rs  options.rs
clients/cli/: Cargo.toml
clients/cli/src/: init.rs  main.rs  run.rs
clients/cli/src/app_state/: handle_message.rs  handle_terminal.rs  mod.rs  new.rs
clients/cli/src/app_state/connecting/: handle_message.rs  handle_terminal.rs  mod.rs  new.rs  unwrap.rs
clients/cli/src/app_state/password_entry/: get.rs  handle_message.rs  handle_terminal.rs  mod.rs  new.rs
clients/cli/src/app_state/wait_for_game_state/: handle_message.rs  mod.rs  new.rs
clients/cli/src/connection/: begin_read.rs  drop.rs  get.rs  mod.rs  read.rs  read_state.rs  send.rs
clients/cli/src/connection/connect/: mod.rs
clients/cli/src/game_state/: handle_message.rs  handle_terminal.rs  mod.rs  new.rs
clients/cli/src/game_state/connecting/: handle_message.rs  mod.rs
clients/cli/src/main_game/: handle_message.rs  handle_terminal.rs  mod.rs  new.rs
clients/cli/src/main_game/view/: add_message.rs  full_render.rs  handle_terminal.rs  mod.rs  new.rs  render.rs  resize.rs  view_event.rs
clients/cli/src/options/: get.rs  mod.rs
clients/cli/src/options/invalid_username/: display.rs  mod.rs  new.rs
clients/cli/src/virtual_terminal/: alternate_buffer.rs  cursor_display.rs  drop.rs  event.rs  get.rs  mod.rs  move_cursor.rs  read.rs  write.rs
clients/cli/src/virtual_terminal/new/: mod.rs
clients/cli/src/virtual_terminal/special_key/: from_key_code.rs  mod.rs
clients/cli/src/virtual_terminal/text_input/: clear.rs  cursor_xy.rs  get.rs  handle_event.rs  mod.rs  new.rs  recalculate_bounds.rs  render.rs  resize.rs
server/: Cargo.toml
server/src/: main.rs
server/src/lobby/: get_timeout.rs  mod.rs  new.rs  on_connect.rs  on_disconnect.rs  on_message.rs  on_server_full.rs  on_timeout.rs  send_all.rs
server/src/lobby/connecting_client/: disconnect.rs  get.rs  mod.rs  new.rs  send.rs  unwrap.rs
server/src/options/: get.rs  mod.rs
server/src/server/: local_address.rs  mod.rs  run.rs
server/src/server/client_socket/: disconnect.rs  mod.rs  new.rs  read.rs
server/src/server/client_socket/error/: display.rs  from.rs  mod.rs
server/src/server/client_socket/writer/: get.rs  (+4 more)
server/src/server/epoll/: drop.rs  mod.rs  new.rs  register.rs  unregister.rs  wait.rs
server/src/server/handle/: deref.rs  drop.rs  mod.rs  register.rs
server/src/server/listen_socket/: accept.rs  get.rs  listen.rs  mod.rs
server/src/server/new/: mod.rs
(+289 files in other folders)
