[package]
name = "blackjack-server"
description = "Server for hosting blackjack games"

edition.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
argparse.workspace = true

linux.git = "https://github.com/shipsimfan/lib-linux"
