[package]
name = "blackjack-server"
description = "Server for hosting blackjack games"
version = "0.1.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
blackjack.workspace = true

argparse.workspace = true
linux.git = "https://github.com/shipsimfan/lib-linux"
