[package]
name = "blackjack-cli"
description = "Command line interface for playing on a blackjack server"
version = "0.0.0"

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
blackjack.workspace = true

win32.git = "https://github.com/shipsimfan/lib-win32"
